# kod

./: .gitignore  LICENSE  hej.hs  matgen.lisp  ml3.py  quick.hs  sicp1.rkt  sicp2.lisp  sicp4.lisp  sicp5.lisp  sort.hs  star.lisp  vec.hs  visatimrad.lisp
R/: ggplottest.R
c/: mmap_anon.c
ceil/: ceil.cpp
cpp/: a.out  mats.hpp  maxprofit1.cpp  maxprofit2.cpp  maxprofit3.cpp  minimize-the-absolute-difference.cpp  path.cpp  readme.md  strperm.cpp  uniqpaths.cpp  uniqpaths2.cpp
cpp/ceil/: CMakeLists.txt  in3  in4
cpp/young/: CMakeLists.txt  young.cpp
euler/: 1.hs  2.hs
haskell/: artichokes.hs  countvow.hs  euler2.hs  gol.hs  matmul.hs  spam.hs  tortoise.hs  vec.hs
haskell/rbm/: rbm.cabal
haskell/rbm/src/: RBM.hs
haskell/sorty/: Sorty.hs
haskell/wyascheme/: readme.md  test.lisp
heap/: CMakeLists.txt  heap.cpp
hs/: RBM.hs  count.hs  getvol.hs  gl.hs  lenstest.hs  lunchandlearn.hs  ramanujan.hs  rbf.hs  rbm.hs  tortoise.hs  triangle.hs  vec.hs
hs/rbm/: LICENSE
intrie/: intrie.py
lispy/: buzz.lisp  f1ish.lisp  sicp1.lisp  sicp3.lisp  sortlen.lisp
ml/: bernbinbeta.hs  linear-disp.py  multivaruppg.py  tensortest1.py  tensortest2.py
path/: path.cpp  readme.md
python/: 23tree.py  heap.py  imsdb_scraper.py  linear-disp.py  priorityqueue.py  radix.py
python/aoc2018/: 12.py  21.py  22.py
python/interviewbit/: 3-sum-zero.py  anagrams.py  array-3-pointers.py  assign-mice-to-holes.py  bst-iterator.py  capture-regions-on-board.py  (+48 more)
qanat/: Qanat.hs  q.hs  test.hs
wyascheme/: hello.hs  main.hs  stdlib.lisp
young/: test  testgen.lisp  young.cpp
(+5 files in other folders)
