name:                rbm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fizzoo/rbm#readme
license:             BSD3
license-file:        LICENSE
author:              fizzoo
maintainer:          vixirfizz@gmail.com
copyright:           2017 fizzoo
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RBM
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , lens
                     , mtl
                     , random
  default-language:    Haskell2010

executable rbm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rbm
  default-language:    Haskell2010

test-suite rbm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base
                     , rbm
                     , tasty >= 0.11.2
                     , tasty-quickcheck >= 0.8.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fizzoo/rbm
